syntax = "proto3";

package calculator;

option go_package = "github.com/iugmali/golang-grpc-course/calculator/proto";

message SimpleSumRequest {
  int64 first_number = 1;
  int64 second_number = 2;
}

message SimpleSumResponse {
  int64 result = 1;
}

service CalculatorService {
  rpc SimpleSum (SimpleSumRequest) returns (SimpleSumResponse);
}
